...
                            // Map
                            //
                            ZStack {
                                MapView(mapType: $mapType, viewManager: self.viewManager)
                                    .frame(width: geometry.size.width,
                                           height: geometry.size.height * 0.5)
                                    .accessibility(identifier: "map")
                                //
                                // Map overlay menu
                                //
                                VStack {
                                    HStack {
                                        if self.viewManager.finishedTravels.count > 0 {
...
                                finishdTravels: self.$viewManager.finishedTravels,
                                switchedTravelIndex: $switchedTravelIndex,
                                viewManager: viewManager
                            )
                        }
                        .alert(
                            "目的地に到着しました",
                            isPresented: self.$isPresentedFinishMessage
                        ) {
                            Button(action: {}) {
                                Text("OK")
                            }
                        } message: {
...
                            .environment(\.locale, Locale(identifier: Locale.preferredLanguages.first ?? Locale.current.description))
                            .onChange(of: self.selectionDate) { newValue in
                                self.updateSelectionDate(newSelectionDate: newValue)
                            }
                        Spacer()
                        VStack {
                            Text("歩行済")
                            Text("目的地")
                        }
                        VStack(alignment: .trailing) {
                            Text(self.viewManager.getCurrentDistanceLabel())
                            Text(self.viewManager.getFinishDistanceLabel())
                        }
                    }.padding(.horizontal, 8)
...
    
    private func editButton() -> some View {
        Button(action: {
            self.isPresentedConfirmFinishRestartMessage = self.viewManager.editButtonPressed()
        }) {
            if self.viewManager.editMode.isEditing {
                Text("完了")
            } else {
                if self.viewManager.travel.isStop {
                    Text("再開")
                } else {
                    Text("編集")
                }
            }
        }
        .accessibility(identifier: "editButton")
        .alert(
            "この旅を再開しますか？",
            isPresented: $isPresentedConfirmFinishRestartMessage
        ) {
            Button(role: .destructive, action: {
                self.restartTravel()
            }) {
                Text("はい、再開します")
            }
            Button(role: .cancel, action: {}) {
                Text("いいえ、再開しません")
            }
        } message: {
            Text("現在実行中の旅は一旦中断されます")
...
    private func finishButton() -> some View {
        HStack {
            Button(action: {
                self.isPresentedConfirmFinishEntryMessage = true
            }) {
                if self.viewManager.travel.isFinish() {
                    Text("旅を終了")
                } else {
                    Text("旅を中断")
                }
            }
            .accessibility(identifier: "finishButton")
            .alert(
                "目的地までの経路を記録しますか？",
                isPresented: $isPresentedConfirmFinishEntryMessage
...
                    // storedTravelNameを""に設定すると最後の確定ボタンが機能しないので注意
                    if travelName == "" {
                        travelName = "新規"
                    }
                    self.storedTravelName = travelName
                }) {
                    Text("はい、記録します")
                }
                Button(role: .cancel, action: {}) {
                    Text("いいえ、記録しません")
                }
            } message: {
                Text("経路を記録した後は全ての経路が初期化され、新しい目的地を再び登録することができます")
            }
        }
        .alert(
            "保存する旅の名前を入力してください",
            isPresented: $isPresentedInputFinishNameMessage
        ) {
            TextField("旅の名前", text: $storedTravelName)
            Button(role: .destructive, action: {
                self.entryTravelToFinishList(entryName: self.storedTravelName)
            }) {
                Text("記録する")
            }
            .disabled(self.storedTravelName.count == 0)
            Button(role: .cancel, action: {}) {
                Text("まだ記録しない")
            }
        } message: {
...
