import Foundation
import SwiftUI
import MapKit

enum MenuMessage: String {
    case requestStart = "開始日と開始地点を設定"
    case requestFinish = "目的地を設定"
    case edit = "経路の編集"
    case infoRoute = "目的地"
    case finish = "目的地に到着しました"
    case infoFinished = "完了"
    case infoInterrupted = "中断"
}

...
    func getFinishDistanceLabel() -> String {
        return "\(self.convertDistanceToKM(distance: self.travel.finishDistance))km"
    }
    
    func getTodayDistanceMapLabel() -> String {
        if self.travel.todayDistance <= 0 {
            return "0km"
        }
        return String(format: "%.1fkm", (self.travel.todayDistance / 1000))
    }
    
    private func convertDistanceToKM(distance: CLLocationDistance) -> Int {
        if distance < 0 {
...
